[package]
name = "converterxmlcsv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"
csv = "1"
glob = "0.3.1"
dialoguer = "0.11.0"
colored = "2.1.0"
clap = "4.5.3"